--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ unity/Library/
 *.suo
 spritekit/MoManPlayground.playground/playground.xcworkspace/contents.xcworkspacedata
 spritekit/MoManPlayground.playground/playground.xcworkspace/xcuserdata/andrewbowers.xcuserdatad/UserInterfaceState.xcuserstate
+spritekit/MoManPlayground.playground/timeline.xctimeline
