--- a/C_pixi/package.json
+++ b/C_pixi/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@pixi/react": "^7.1.1",
+    "@pixi/sound": "^5.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
